<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.duckdating.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.duckdating.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/login_fragment" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.duckdating.ui.login.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/register_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.duckdating.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.duckdating.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.duckdating.ui.match.MatchFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_matches" />

</navigation>